--- a/.gitignore
+++ b/.gitignore
@@ -307,3 +307,19 @@ dist
 cypress/videos
 cypress/screenshots
 .vscode/settings.json
+
+**/.ipynb_checkpoints/*
+**/.virtual_documents/*
+assets/.METADATA/job_run.*
+assets/job_run
+assets/.METADATA/auto_ml.*
+assets/auto_ml
+assets/.METADATA/experiment.*
+assets/.METADATA/wml_experiment.*
+assets/experiment
+assets/.METADATA/wml_training_definition.*
+assets/wml_training_definition
+assets/.METADATA/wml_remote_training_system.*
+assets/wml_remote_training_system
+assets/federated_learning
+.tmp-project-imports/
